plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'cppmobile'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

javafx {
    version = '21'
    modules = ['javafx.controls', 'javafx.fxml']
}

application {
    mainClass = 'cppmobile.CPPMobileApp'
}

run {
    jvmArgs = [
        '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
        '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
        '--add-exports', 'javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
        '--add-exports', 'javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
    ]
}
